			SWI-Prolog ChangeLog
			====================

VERSION 4.0.10
==============

  * FIXED/ENHANCED: Win32: Various issues around installation.

  * FIXED: Prefer %HOMEDRIVE%\%HOMEPATH% over %USERPROFILE% for expanding
    ~ on Windows.

  * FIXED: MT version: cleanup mutex after closing a stream.  Memory leak
    detected by Andrew V. Diatchkov.

  * PORT: On machines using FPE rather then IEEE754 math error reporting
    supporting the fpsetmask() interface, use this interface to make math
    errors IEEE754 compliant.  This applies to FreeBSD upto 3.x.  Thanks
    to NIDE Naoyuki for a clear explanation and fix.

  * MODIFIED: Windows.  If Prolog was started as <exe> <file.pl> and file.pl
    is a script file, change directory to the directory holding the <file.pl>.
    This makes starting a script by opening it from the explorer and dragging
    a script on plwin.exe behave the same.

  * FIXED: Mistake handling script arguments (#!): forgotten string
    termination.

  * FIXED: "nmake /f makefile.mak DBG=true install" to install .PDB files for
    all .EXE and .DLL files making up SWI-Prolog.

  * ADDED: Allow single-keystroke selection of edit/1 with upto 10
    alternatives.

  * PORT: deal with latest libreadline that renamed
    filename_completion_function into rl_filename_completion_function.
    Thanks to Lourens van der Meij.

  * ADDED: edit/1 now merges more specific with more general matches:
    matching just a file is overruled by a match on the same file with
    a line number.  This implies that edit(Pred), where Pred is the
    name of a predicate in a file with the same name will immediately
    jump to the predicate.

  * FIXED: Two more mutex handling problems with patch contributed by
    Emerson dos Santos.

  * FIXED: with_mutex/2 deadlock, reported by Lyosha.

  * ADDED: library(socket): tcp_setopt/2 to set options on sockets.

  * FIXED: make library(socket) ready for multi-threaded operation.
